--- a/test/collective/CMakeLists.txt
+++ b/test/collective/CMakeLists.txt
@@ -138,7 +138,10 @@ if((WITH_GPU OR WITH_ROCM) AND (LINUX))
   py_test_modules(
     test_collective_broadcast_api MODULES test_collective_broadcast_api ENVS
     "http_proxy=;https_proxy=;PYTHONPATH=..:${PADDLE_BINARY_DIR}/python")
-  if(${CUDA_ARCH_NAME} STREQUAL "Ampere")
+  if(WITH_ROCM)
+    set_tests_properties(test_collective_broadcast_api
+                         PROPERTIES TIMEOUT "450" LABELS "RUN_TYPE=DIST")
+  elseif(${CUDA_ARCH_NAME} STREQUAL "Ampere")
     set_tests_properties(test_collective_broadcast_api
                          PROPERTIES TIMEOUT "500" LABELS "RUN_TYPE=DIST")
   else()
